# Theia

./: .env.shared  .gitignore  Dockerfile  LICENSE  README.md  api.py  data_types.py  datasets.csv  docker-compose.yml  errors.py  main.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  subdist_boundingBox.csv  test_download.py  theia_api.py
api/: data_types.py  errors.py  theia_api.py  util.py
docs/: index.md
tests/: test_download.py  test_scene_list_add.py
theia/: api.py  data_types.py  endpoint_types.py  initializer.py  payloads.py  util_types.py
