[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "theia"
version = "0.1.0"
dynamic = ["readme"]
description = "A USGS M2M Wrapper in Python"
authors = [
  { name = "Vineet Agarwal", email = "vineetagarwal2402@gmail.com"}
]
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "pydantic>=2.8.2",
  "pandas>2.2.2",
]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type="text/markdown"}
